--- a/LocadoraDeCarros/nbproject/project.properties
+++ b/LocadoraDeCarros/nbproject/project.properties
@@ -30,12 +30,22 @@ dist.jar=${dist.dir}/LocadoraDeCarros.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.9.4.jar=..\\..\\..\\..\\Downloads\\Para o trabalho do Const\\dependencias\\commons-beanutils-1.9.4.jar
+file.reference.commons-collections4-4.1.jar=..\\..\\..\\..\\Downloads\\Para o trabalho do Const\\dependencias\\commons-collections4-4.1.jar
+file.reference.commons-lang3-3.9.jar=..\\..\\..\\..\\Downloads\\Para o trabalho do Const\\dependencias\\commons-lang3-3.9.jar
+file.reference.opencsv-5.0.jar=..\\..\\..\\..\\Downloads\\Para o trabalho do Const\\dependencias\\opencsv-5.0.jar
+file.reference.org-apache-commons-logging.jar=..\\..\\..\\..\\Downloads\\Para o trabalho do Const\\dependencias\\org-apache-commons-logging.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
+    ${file.reference.commons-collections4-4.1.jar}:\
+    ${file.reference.commons-lang3-3.9.jar}:\
+    ${file.reference.opencsv-5.0.jar}:\
+    ${file.reference.org-apache-commons-logging.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -78,7 +88,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=locadoradecarros.MainLocadora
+javafx.main.class=com.settingsbar.MainTesteJanela
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
