--- a/LocadoraDeCarros/nbproject/project.properties
+++ b/LocadoraDeCarros/nbproject/project.properties
@@ -88,7 +88,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=com.settingsbar.MainTesteJanela
+javafx.main.class=controller.MainCadastro
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
